test_programs/compile_failure/noirc_frontend_tests_check_trait_wrong_parameter_type/src/main.nr

    pub trait Default2 {
        fn default(x: Field, y: NotAType) -> Field;
    }

    fn main(x: Field, y: Field) {
        assert(y == x);
    }
    